--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "build": "npx tsc",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build:ui": "rm -rf dist && npm run build && cd ../client/ && npm run build && cp -r dist ../server"
+    "build:ui": "rm -rf dist && npm run build && cd ../client/ && npm run build && cp -r dist ../server",
+    "build:full": "npm run build:ui && npm run build"
   },
   "keywords": [],
   "author": "",
