--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
     "build:ui": "rm -rf dist && npm run build && cd ../client/ && npm run build && cp -r dist ../server",
-    "build:full": "npm run build:ui && npm run build"
+    "build:full": "npm run build:ui && npm run build",
+    "deploy": "npm run build:full && fly deploy"
   },
   "keywords": [],
   "author": "",
@@ -17,12 +18,13 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "cross-env": "^7.0.3"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.4",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.5",
-    "cross-env": "^7.0.3",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.4"
