--- a/server/package.json
+++ b/server/package.json
@@ -17,14 +17,20 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.30.8",
     "express": "^4.19.2",
-    "cross-env": "^7.0.3"
+    "postgres": "^3.4.4"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.4",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.5",
+    "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "drizzle-kit": "^0.20.14",
+    "eslint": "^8.57.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.4"
