--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,39 +36,32 @@ jobs:
         npm install
         npm run build
 
-    #- name: Upload build artifacts
-     # uses: actions/upload-artifact@v3
-      #with:
-       # name: build-output
-        #path: ./server/dist/
-    - uses: superfly/flyctl-actions/setup-flyctl@master
-    - name: Deploy to fly.io
-      run: |
-        cd server
-        flyctl deploy --remote-only
-      env:
-        FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: build-output
+        path: ./server/dist/
   
 
-#  deploy:
- #   runs-on: ubuntu-latest
-  #  needs: build
-   # if: needs.build.result == 'success' && github.ref == 'refs/heads/main'
-#
- #   steps:
-  #    - uses: actions/checkout@v4
-   #   
-    #  - uses: superfly/flyctl-actions/setup-flyctl@master
-#
- #     - name: Download build artifacts
-  #      uses: actions/download-artifact@v3
-   #     with:
-    #      name: build-output
-     #     path: ./server/dist/
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    if: needs.build.result == 'success' && github.ref == 'refs/heads/main'
+
+    steps:
+      - uses: actions/checkout@v4
       
-      #- name: Deploy to fly.io
-       # run: |
-        #  cd server
-         # flyctl deploy --remote-only
-       # env:
-        #  FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+      - uses: superfly/flyctl-actions/setup-flyctl@master
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: build-output
+          path: ./server/dist/
+      
+      - name: Deploy to fly.io
+        run: |
+          cd server
+          flyctl deploy --remote-only
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
