--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,7 @@ jobs:
       - name: Install tsx
         run: |
           npm install drizzle-orm@0.30.8
-          npm install dotenv@16..4.5
+          npm install dotenv@16.4.5
           npm install -D tsx
           npm install -D drizzle-kit@0.20.14
 
