--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,12 +62,10 @@ jobs:
           path: ./server/dist/
 
       # We need to install dependencies for the migrations.
-      - name: Install tsx
+      - name: Install dependencies
         run: |
-          npm install drizzle-orm@0.30.8
-          npm install dotenv@16.4.5
-          npm install -D tsx
-          npm install -D drizzle-kit@0.20.14
+          npm install -g tsx
+          npm install
 
       - name: Generate migrations
         run: |
