--- a/server/package.json
+++ b/server/package.json
@@ -16,17 +16,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.8",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "postgres": "^3.4.4"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.4",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.12.5",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "drizzle-kit": "^0.20.14",
